# Dysprosium

./: Cargo.toml  Makefile  README.md  build.rs  build.sh
crates/search-params/: Cargo.toml
crates/search-params/examples/: stdout.rs
crates/search-params/src/: lib.rs  param.rs
dysprosium-lichess/: Cargo.toml  config.toml
dysprosium-lichess/src/: config.rs  main.rs
dysprosium-uci/: Cargo.toml
dysprosium-uci/src/: client.rs  main.rs  uci.rs
src/: eval.rs  game.rs  lib.rs  line.rs  move_order.rs  node.rs  search.rs  shared_table.rs  trans_table.rs
src/eval/: eval.rs  mod.rs  pesto.rs  tuned.rs  weight.rs
src/search/: bound.rs  mod.rs  move_ord.rs  params.rs  quiescence.rs  quisecence.rs
src/search/move_ord/: history.rs  killer.rs  mod.rs
tuner/: Cargo.toml
tuner/src/: main.rs
