[workspace]
members = ["dysprosium-lichess","dysprosium-uci"]

[package]
name = "dysprosium"
version = "0.2.0"
edition = "2024"

[dependencies]
arrayvec = "0.7"
bytemuck = { version = "1.20.0", features = ["derive"] }
chess = { version = "4.0.0", git = "https://github.com/funnsam/chess.git" }
fastrand = "2.3.0"
fxhash = "0.2.1"
parking_lot = "0.12.3"

[features]
default = ["moveord-all", "search-all", "qs-all"]

moveord-all = [
    # "moveord-cmove",
    "moveord-hash",
    # "moveord-hist",
    # "moveord-killer",
    "moveord-mvv",
]
moveord-cmove = []
moveord-hash = []
moveord-hist = []
moveord-killer = []
moveord-mvv = []

search-all = [
    "search-fp",
    "search-iir",
    "search-lmp",
    "search-lmr",
    "search-nmp",
    "search-rfp",
    # "search-ttc",
]
search-fp = []
search-iir = []
search-lmp = []
search-lmr = []
search-nmp = []
search-rfp = []
search-ttc = []

qs-all = [
    "qs-big-delta",
    "qs-delta",
    "qs-see",
]
qs-big-delta = []
qs-delta = []
qs-see = []

[profile.release-debuginfo]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
panic = "abort"

[profile.test]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[package.metadata.release]
pre-release-replacements = [
    { file="CHANGELOG.md", search="# Unreleased", replace="# {{version}}" },
    { file="CHANGELOG.md", search="<!-- updated by cargo-release -->", replace="<!-- updated by cargo-release -->\n\n# Unreleased" },
]
