[package]
name = "dysprosium-lichess"
version = "0.1.0"
edition = "2024"

[dependencies]
chess = { version = "4.0.0", git = "https://github.com/funnsam/chess.git" }
dysprosium = { version = "0.1.0", path = ".." }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
ureq = "2.12.1"
